Source/WebCore/Modules/battery/BatteryController.cpp
@@ -51,6 +51,9 @@ void BatteryController::addListener(BatteryManager* batteryManager)
 {
     m_listeners.append(batteryManager);
     m_client->startUpdating();
+
+    if (m_batteryStatus)
+        batteryManager->updateBatteryStatus(m_batteryStatus);
 }
 
 void BatteryController::removeListener(BatteryManager* batteryManager)
@@ -76,6 +79,9 @@ void BatteryController::updateBatteryStatus(PassRefPtr<BatteryStatus> batterySta
 
         if (m_batteryStatus->level() != status->level())
             didChangeBatteryStatus(WebCore::eventNames().levelchangeEvent, status);
+    } else {
+        for (ListenerVector::iterator it = m_listeners.begin(); it != m_listeners.end(); ++it)
+            (*it)->updateBatteryStatus(status);
     }
 
     m_batteryStatus = status.release();
